move to webpack

--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "@k4czp3r/lit-webapp-boilerplate",
   "private": true,
-  "version": "1.0.0",
-  "description": "My own lit webapp boilerplate",
+  "version": "1.1.6",
+  "description": "A simple web component",
   "main": "my-element.js",
   "module": "my-element.js",
-  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "clean": "rimraf dist/ out/ dev-build/",
-    "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
-    "lint:eslint": "eslint 'src/**/*.ts'",
-    "lint:lit-analyzer": "lit-analyzer",
-    "format": "prettier \"**/*.{cjs,html,js,json,md,ts}\" --ignore-path ./.eslintignore --write",
-    "analyze": "cem analyze --litelement --globs \"src/**/*.ts\"",
-    "analyze:watch": "cem analyze --litelement --globs \"src/**/*.ts\" --watch",
-    "serve": "rollup -c -w --environment BUILD:development",
-    "deploy": "rollup -c --environment INCLUDE_DEPS,BUILD:production"
+    "build": "npm run-script lint && cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "build:stats": "npm run-script lint && cross-env NODE_ENV=production:stats webpack --config webpack.prod.js --profile --json > stats.json",
+    "dev": " cross-env NODE_ENV=development NODE_OPTIONS=--max_old_space_size=2048 webpack serve --hot --config webpack.dev.js",
+    "lint": "eslint --fix ./src",
+    "tauri-build": "tauri build",
+    "tauri-dev": "tauri dev"
   },
   "keywords": [
     "web-components",
@@ -25,45 +19,61 @@
     "typescript",
     "lit"
   ],
-  "author": "K4CZP3R",
+  "author": "Google LLC",
+  "license": "BSD-3-Clause",
   "dependencies": {
+    "@lit-labs/motion": "^1.0.3",
     "@reduxjs/toolkit": "^1.8.3",
-    "@rollup/plugin-commonjs": "^22.0.1",
+    "@tauri-apps/api": "^1.1.0",
     "@vaadin/router": "^1.7.4",
+    "dotenv": "^16.0.3",
+    "highlight.js": "^11.6.0",
+    "jwt-decode": "^3.1.2",
     "lit": "^2.2.8",
-    "nanoid": "^4.0.0",
+    "lodash": "^4.17.21",
+    "marked": "^4.0.18",
     "pwa-helpers": "^0.9.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "reselect": "^4.1.6",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-import-css": "^3.0.3"
+    "three": "^0.142.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.3",
-    "@open-wc/testing": "^3.1.5",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "@web/dev-server": "^0.1.31",
-    "@web/dev-server-legacy": "^1.0.0",
-    "@web/rollup-plugin-copy": "^0.3.0",
-    "@web/rollup-plugin-html": "^1.10.3",
-    "@web/rollup-plugin-polyfills-loader": "^1.3.1",
-    "@webcomponents/webcomponentsjs": "^2.6.0",
-    "concurrently": "^7.3.0",
-    "eslint": "^8.15.0",
-    "lit-analyzer": "^1.2.1",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.77.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-minify-html-literals": "^1.2.6",
-    "rollup-plugin-serve": "^2.0.0",
-    "rollup-plugin-summary": "^1.4.3",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "~4.7.4"
+    "@tauri-apps/cli": "^1.1.1",
+    "@types/css-minimizer-webpack-plugin": "^3.2.0",
+    "@types/lodash": "^4.14.191",
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.11.9",
+    "@types/terser-webpack-plugin": "^5.2.0",
+    "@types/three": "^0.146.0",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "cross-env": "^7.0.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "esbuild-loader": "^2.20.0",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-lit": "^1.6.1",
+    "eslint-plugin-wc": "^1.3.2",
+    "filemanager-webpack-plugin": "^7.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "inspectpack": "^4.7.1",
+    "lit-css-loader": "^2.0.0",
+    "minify-html-literals-loader": "^1.1.1",
+    "sass": "^1.56.0",
+    "sass-loader": "^13.1.0",
+    "simple-progress-webpack-plugin": "^2.0.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "^4.8.4",
+    "typescript-plugin-css-modules": "^4.1.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
