--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,22 @@
 server {
     listen 80;
     listen [::]:80;
+    server_name ${DOMAINNAME};
+    root /usr/share/nginx/html;
+    index index.html;
+
 
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri /index.html;
+        try_files $uri$args $uri$args/ /index.html;
+    }
+    
+    # This block will catch static file requests, such as images, css, js
+    # The ?: prefix is a 'non-capturing' mark, meaning we do not require
+    # the pattern to be captured into $1 which should help improve performance
+    location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+        # Some basic cache-control for static files to be sent to the browser
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate";
     }
 }
