--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,46 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "module": "es2020",
-    "lib": [
-      "es2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "outDir": "./out",
-    "rootDir": "./src",
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitOverride": true,
+    "useDefineForClassFields": false,
+    "target": "ES6",
+    "module": "ESNext",
+    "baseUrl": ".",
+    "paths": {
+      "~services/*": [
+        "./src/services/*"
+      ],
+      "~elements/*": [
+        "./src/elements/*"
+      ],
+      "~helpers/*": [
+        "./src/helpers/*"
+      ],
+      "~styles/*": [
+        "./src/assets/styles/*"
+      ],
+      "~redux/*": [
+        "./src/redux/*"
+      ],
+      "~src/*": [
+        "./src/*"
+      ]
+    },
+    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "plugins": [
       {
-        "name": "ts-lit-plugin",
-        "strict": true
+        "name": "typescript-plugin-css-modules"
       }
-    ]
+    ],
   },
-  "include": [
-    "src/**/*.ts",
-    "src/*.ts"
+  "exclude": [
+    "node_modules",
+    "build"
   ],
-  "exclude": []
+  "include": [
+    "src",
+    "."
+  ]
 }
